--- a/src/styling/style.css
+++ b/src/styling/style.css
@@ -70,7 +70,7 @@ body {
   top: 0;
   right: 0;
   width: 100%;
-  height: 48px;
+  height: 50px;
   z-index: 9;
   -webkit-box-shadow: 0 0 6px 4px rgba(0, 0, 0, 0.5);
           box-shadow: 0 0 6px 4px rgba(0, 0, 0, 0.5);
@@ -78,8 +78,8 @@ body {
   display: grid;
   -ms-grid-columns: 40px auto;
       grid-template-columns: 40px auto;
-  -ms-grid-rows: 20px 20px 8px;
-      grid-template-rows: 20px 20px 8px;
+  -ms-grid-rows: 20px 20px 10px;
+      grid-template-rows: 20px 20px 10px;
       grid-template-areas: "thumbnail userName" "thumbnail userID" "userProgress userProgress";
 }
 
@@ -1115,18 +1115,18 @@ body {
 }
 
 #sidebar #toolkit #toolkitBody ul li:nth-child(1) {
-  background-color: #271621;
+  background-color: #340926;
   margin: 0;
-  color: #d2b1c7;
+  color: #ed97d0;
   padding: 10px;
   font-weight: 800;
-  font-size: 20px;
-  letter-spacing: 4px;
-  line-height: 22px;
+  font-size: 16px;
+  letter-spacing: 1.5px;
+  line-height: 20px;
 }
 
 #sidebar #toolkit #toolkitBody ul li {
-  background-color: #a38f9c;
+  background-color: #e774c0;
   font-size: 12px;
   line-height: 14px;
   font-weight: 600;
@@ -1144,14 +1144,14 @@ body {
   font-size: 18px;
   padding: 10px;
   border-radius: 4px;
-  color: #0b090b;
+  color: white;
   font-weight: 600;
   letter-spacing: 2.5px;
   line-height: 20px;
   vertical-align: middle;
   margin: 5px 0 5px 0;
   font-weight: 800;
-  background-color: #7b6574;
+  background-color: #bf228a;
 }
 
 #sidebar #toolkit #toolkitBody ul li h4 {
@@ -1160,7 +1160,7 @@ body {
           appearance: none;
   font-size: 14px;
   padding: 8px;
-  background-color: #4f404a;
+  background-color: #340926;
   border-radius: 4px;
   color: white;
   font-weight: 600;
@@ -1176,7 +1176,7 @@ body {
           appearance: none;
   font-size: 12px;
   padding: 6px;
-  background-color: #221c20;
+  background-color: #791558;
   border-radius: 4px;
   color: white;
   font-weight: 600;
@@ -1192,9 +1192,9 @@ body {
           appearance: none;
   font-size: 12px;
   padding: 4px;
-  background-color: #c8bcc4;
+  background-color: white;
   border-radius: 4px;
-  color: #221c20;
+  color: #0b090b;
   font-weight: 600;
   letter-spacing: 1px;
   line-height: 14px;
